--- a/portfolio.html
+++ b/portfolio.html
@@ -165,7 +165,7 @@
     <header>
         <h1>David Bassey</h1>
         <div class="image-container">
-            <img src="your-image-url.jpg" alt="David Bassey">
+            <img src="me.jpg" alt="David Bassey">
         </div>
         <p>aka Angel Basi</p>
         <nav>
@@ -206,7 +206,7 @@
 
     <div class="section" id="contact">
         <h2>Contact</h2>
-        <p>Email: david@example.com</p>
+        <p>Email: dbassey62@gmail.com</p>
     </div>
 </body>
 </html>
