--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             display: flex;
             overflow: hidden;
             position: relative;
-            height: 300px; /* Increased height for better visibility */
+            height: 400px; /* Increased height for better visibility */
             margin: 20px 0;
         }
         .carousel-inner {
@@ -107,6 +107,12 @@
         .carousel-item:nth-child(4) {
             background-color: #f3f3f3; /* Light Grey */
             color: #000; /* Black text for better visibility */
+        }
+        .carousel-item img {
+            width: 100%; /* Full width */
+            height: auto; /* Maintain aspect ratio */
+            max-height: 200px; /* Limit height for images */
+            margin-bottom: 15px; /* Space between image and text */
         }
         .carousel-item::before {
             content: '';
@@ -201,22 +207,26 @@
         <div class="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item">
+                    <img src="portfolio.jpg" alt="Personal Portfolio Website"> <!-- Image for Personal Portfolio -->
                     <h3>Personal Portfolio Website</h3>
                     <p>Description: I created a responsive portfolio website to showcase my skills, projects, and experiences.</p>
                     <p>Technologies Used: HTML, CSS, JavaScript, and possibly a framework like React or Vue.js.</p>
                 </div>
                 <div class="carousel-item">
+                    <img src="task_management.jpg" alt="Task Management App"> <!-- Image for Task Management App -->
                     <h3>Task Management App</h3>
                     <p>Description: I developed a web application that allows users to create, manage, and track their tasks and to-do lists.</p>
                     <p>Technologies Used: Node.js for the backend, MongoDB for the database, and React Native for mobile development.</p>
                 </div>
                 <div class="carousel-item">
+                    <img src="orbital_blast.jpg" alt="Orbital Blast"> <!-- Image for Orbital Blast -->
                     <h3>Orbital Blast</h3>
                     <p>Description: Orbital Blast is an exciting gaming project featuring immersive roleplay and multiplayer maps. Players can explore vast environments and engage in thrilling battles.</p>
                     <p>Technologies Used: Unreal Engine, C++, JavaScript.</p>
                     <p>Status: Project in progress. <em>Coming Soon!</em></p>
                 </div>
                 <div class="carousel-item">
+                    <img src="blog_platform.jpg" alt="Blog Platform"> <!-- Image for Blog Platform -->
                     <h3>Blog Platform</h3>
                     <p>Description: I developed a blogging platform that allows users to create, edit, and comment on blog posts.</p>
                     <p>Technologies Used: Ruby on Rails or Django for the backend, and React or Angular for the frontend.</p>
