--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
             background-color: #33aaff; /* Light Blue */
         }
         .carousel-item:nth-child(3) {
-            background-color: #555; /* Dark Grey */
+            background-color: deep blue; /* blue */
         }
         .carousel-item:nth-child(4) {
-            background-color: #f3f3f3; /* Light Grey */
+            background-color: grey; /*  Grey */
             color: #000; /* Black text for better visibility */
         }
         .carousel-item img {
@@ -115,7 +115,7 @@
             margin-bottom: 15px; /* Space between image and text */
         }
         .carousel-item::before {
-            content: '';
+            content: 'show';
             position: absolute;
             top: 0;
             left: 0;
