--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-            margin: 50;
+            margin: 0;
             font-family: 'Arial', sans-serif;
             background-color: #000; /* Black background */
             color: #fff; /* White text */
-            overflow: hidden;
+            overflow-x: hidden; /* Prevent horizontal overflow */
         }
         header {
             text-align: center;
@@ -102,10 +102,10 @@
             background-color: #33aaff; /* Light Blue */
         }
         .carousel-item:nth-child(3) {
-            background-color: deep blue; /* blue */
+            background-color: deepblue; /* Blue */
         }
         .carousel-item:nth-child(4) {
-            background-color: grey; /*  Grey */
+            background-color: grey; /* Grey */
             color: #000; /* Black text for better visibility */
         }
         .carousel-item img {
@@ -149,6 +149,15 @@
             transform: scale(1.2);
             color: #00ffcc; /* Teal */
         }
+           footer {
+            text-align: center;
+            padding: 10px;
+            background: silver; /* Silver background */
+            color: #000; /* Black text for better visibility */
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
@@ -186,7 +195,7 @@
     <header>
         <h1>David Bassey</h1>
         <div class="image-container">
-            <img src="me.jpg" alt="David Bassey">
+            <img src="me.jpg" alt="David Bassey" loading="lazy"> <!-- Added lazy loading -->
         </div>
         <p>aka Angel Basi</p>
         <nav>
@@ -207,26 +216,26 @@
         <div class="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item">
-                    <img src="portfolio.jpg" alt="Personal Portfolio Website"> <!-- Image for Personal Portfolio -->
+                    <img src="portfolio.jpg" alt="Personal Portfolio Website" loading="lazy"> <!-- Added lazy loading -->
                     <h3>Personal Portfolio Website</h3>
                     <p>Description: I created a responsive portfolio website to showcase my skills, projects, and experiences.</p>
                     <p>Technologies Used: HTML, CSS, JavaScript, and possibly a framework like React or Vue.js.</p>
                 </div>
                 <div class="carousel-item">
-                    <img src="task_management.jpg" alt="Task Management App"> <!-- Image for Task Management App -->
+                    <img src="task_management.jpg" alt="Task Management App" loading="lazy"> <!-- Added lazy loading -->
                     <h3>Task Management App</h3>
                     <p>Description: I developed a web application that allows users to create, manage, and track their tasks and to-do lists.</p>
                     <p>Technologies Used: Node.js for the backend, MongoDB for the database, and React Native for mobile development.</p>
                 </div>
                 <div class="carousel-item">
-                    <img src="orbital_blast.jpg" alt="Orbital Blast"> <!-- Image for Orbital Blast -->
+                    <img src="orbital_blast.jpg" alt="Orbital Blast" loading="lazy"> <!-- Added lazy loading -->
                     <h3>Orbital Blast</h3>
                     <p>Description: Orbital Blast is an exciting gaming project featuring immersive roleplay and multiplayer maps. Players can explore vast environments and engage in thrilling battles.</p>
                     <p>Technologies Used: Unreal Engine, C++, JavaScript.</p>
                     <p>Status: Project in progress. <em>Coming Soon!</em></p>
                 </div>
                 <div class="carousel-item">
-                    <img src="blog_platform.jpg" alt="Blog Platform"> <!-- Image for Blog Platform -->
+                    <img src="blog_platform.jpg" alt="Blog Platform" loading="lazy"> <!-- Added lazy loading -->
                     <h3>Blog Platform</h3>
                     <p>Description: I developed a blogging platform that allows users to create, edit, and comment on blog posts.</p>
                     <p>Technologies Used: Ruby on Rails or Django for the backend, and React or Angular for the frontend.</p>
@@ -249,6 +258,16 @@
     <div class="section" id="contact">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:dbassey62@gmail.com" style="color: #00ffcc;">dbassey62@gmail.com</a></p>
+  <div class="social-links">
+    <a href="https://wa.me/1234567890" target="_blank">WhatsApp</a>
+    <a href="https://twitter.com/yourtwitterhandle" target="_blank">Twitter</a>
+</div>
+
     </div>
+    
+    <footer>
+        <p>&copy; 2025 David Bassey. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
