--- a/index.html
+++ b/index.html
@@ -6,84 +6,25 @@
     <title>David Bassey - Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        body {
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-            background-color: #000; /* Black background */
-            color: #fff; /* White text */
-            overflow-x: hidden; /* Prevent horizontal overflow */
-        }
-        header {
-            text-align: center;
-            padding: 20px;
-            animation: fadeIn 1s;
-            position: sticky;
-            top: 0;
-            background: rgba(0, 0, 0, 0.8);
-            z-index: 1000;
-            box-shadow: 0 4px 20px rgba(255, 255, 255, 0.1);
-        }
-        nav {
-            margin: 10px 0;
-        }
-        nav a {
-            color: #fff;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s, transform 0.3s;
-        }
-        nav a:hover {
-            color: #00ffcc; /* Teal on hover */
-            transform: scale(1.1);
-        }
-        h1 {
-            font-size: 3em;
-            margin: 0;
-            animation: slideDown 1s;
-        }
-        p {
-            font-size: 1.2em;
-            animation: fadeIn 1s 0.5s forwards;
-        }
-        .section {
-            padding: 50px;
-            text-align: center;
-            animation: slideIn 1s forwards;
-        }
-        .image-container {
-            margin: 20px 0;
-            width: 200px;
-            height: 200px;
-            border-radius: 50%;
-            overflow: hidden;
-            display: inline-block;
-            border: 5px solid #fff; /* Optional border */
-            animation: pulse 2s infinite;
-        }
-        .image-container img {
-            width: 100%;
-            height: auto;
-            transition: transform 0.5s;
-        }
-        .image-container:hover img {
-            transform: scale(1.1);
-        }
+        /* Existing styles... */
+
         .carousel {
             display: flex;
             overflow: hidden;
             position: relative;
-            height: 400px; /* Increased height for better visibility */
+            height: auto; /* Allow height to adjust based on content */
             margin: 20px 0;
         }
+
         .carousel-inner {
             display: flex;
             transition: transform 0.5s ease;
-            width: 400%;
+            width: 100%; /* Set width to 100% for responsiveness */
         }
+
         .carousel-item {
-            min-width: 100%;
-            height: 100%;
+            min-width: 100%; /* Each item takes full width */
+            height: auto; /* Allow height to adjust based on content */
             display: flex;
             flex-direction: column; /* Align items vertically */
             justify-content: center;
@@ -95,88 +36,12 @@
             animation: fadeInUp 0.5s forwards;
             padding: 20px; /* Padding for better text spacing */
         }
-        .carousel-item:nth-child(1) {
-            background-color: #ff5733; /* Red */
-        }
-        .carousel-item:nth-child(2) {
-            background-color: #33aaff; /* Light Blue */
-        }
-        .carousel-item:nth-child(3) {
-            background-color: deepblue; /* Blue */
-        }
-        .carousel-item:nth-child(4) {
-            background-color: grey; /* Grey */
-            color: #000; /* Black text for better visibility */
-        }
+
         .carousel-item img {
             width: 100%; /* Full width */
             height: auto; /* Maintain aspect ratio */
             max-height: 200px; /* Limit height for images */
             margin-bottom: 15px; /* Space between image and text */
-        }
-        .carousel-item::before {
-            content: 'show';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(255, 255, 255, 0.1);
-            transition: opacity 0.5s;
-            opacity: 0;
-        }
-        .carousel-item:hover::before {
-            opacity: 1;
-        }
-        .skills {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            margin-top: 20px;
-        }
-        .skill {
-            margin: 10px;
-            font-size: 1.5em;
-            transition: transform 0.3s, color 0.3s;
-            display: flex;
-            align-items: center;
-        }
-        .skill i {
-            margin-right: 10px;
-            color: #00ffcc; /* Teal */
-        }
-        .skill:hover {
-            transform: scale(1.2);
-            color: #00ffcc; /* Teal */
-        }
-           footer {
-            text-align: center;
-            padding: 10px;
-            background: silver; /* Silver background */
-            color: #000; /* Black text for better visibility */
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-        @keyframes slideDown {
-            from { transform: translateY(-20px); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
-        }
-        @keyframes slideIn {
-            from { transform: translateY(50px); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
-        }
-        @keyframes pulse {
-            0%, 100% { transform: scale(1); }
-            50% { transform: scale(1.05); }
-        }
-        @keyframes fadeInUp {
-            from { transform: translateY(20px); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
         }
     </style>
     <script>
@@ -195,7 +60,7 @@
     <header>
         <h1>David Bassey</h1>
         <div class="image-container">
-            <img src="me.jpg" alt="David Bassey" loading="lazy"> <!-- Added lazy loading -->
+            <img src="me.jpg" alt="David Bassey" loading="lazy">
         </div>
         <p>aka Angel Basi</p>
         <nav>
@@ -216,29 +81,29 @@
         <div class="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item">
-                    <img src="portfolio.jpg" alt="Personal Portfolio Website" loading="lazy"> <!-- Added lazy loading -->
+                    <img src="portfolio.jpg" alt="Personal Portfolio Website" loading="lazy">
                     <h3>Personal Portfolio Website</h3>
-                    <p>Description: I created a responsive portfolio website to showcase my skills, projects, and experiences.</p>
-                    <p>Technologies Used: HTML, CSS, JavaScript, and possibly a framework like React or Vue.js.</p>
+                    <p>A responsive website showcasing my skills and projects.</p>
+                    <p>Technologies: HTML, CSS, JavaScript.</p>
                 </div>
                 <div class="carousel-item">
-                    <img src="task_management.jpg" alt="Task Management App" loading="lazy"> <!-- Added lazy loading -->
+                    <img src="task_management.jpg" alt="Task Management App" loading="lazy">
                     <h3>Task Management App</h3>
-                    <p>Description: I developed a web application that allows users to create, manage, and track their tasks and to-do lists.</p>
-                    <p>Technologies Used: Node.js for the backend, MongoDB for the database, and React Native for mobile development.</p>
+                    <p>A web app for creating and managing tasks.</p>
+                    <p>Technologies: Node.js, MongoDB, React Native.</p>
                 </div>
                 <div class="carousel-item">
-                    <img src="orbital_blast.jpg" alt="Orbital Blast" loading="lazy"> <!-- Added lazy loading -->
+                    <img src="orbital_blast.jpg" alt="Orbital Blast" loading="lazy">
                     <h3>Orbital Blast</h3>
-                    <p>Description: Orbital Blast is an exciting gaming project featuring immersive roleplay and multiplayer maps. Players can explore vast environments and engage in thrilling battles.</p>
-                    <p>Technologies Used: Unreal Engine, C++, JavaScript.</p>
-                    <p>Status: Project in progress. <em>Coming Soon!</em></p>
+                    <p>An immersive gaming project with multiplayer features.</p>
+                    <p>Technologies: Unreal Engine, C++.</p>
+                    <p>Status: In progress. <em>Coming Soon!</em></p>
                 </div>
                 <div class="carousel-item">
-                    <img src="blog_platform.jpg" alt="Blog Platform" loading="lazy"> <!-- Added lazy loading -->
+                    <img src="blog_platform.jpg" alt="Blog Platform" loading="lazy">
                     <h3>Blog Platform</h3>
-                    <p>Description: I developed a blogging platform that allows users to create, edit, and comment on blog posts.</p>
-                    <p>Technologies Used: Ruby on Rails or Django for the backend, and React or Angular for the frontend.</p>
+                    <p>A platform for creating and sharing blog posts.</p>
+                    <p>Technologies: Ruby on Rails, React.</p>
                 </div>
             </div>
         </div>
@@ -258,16 +123,10 @@
     <div class="section" id="contact">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:dbassey62@gmail.com" style="color: #00ffcc;">dbassey62@gmail.com</a></p>
-  <div class="social-links">
-    <a href="https://wa.me/1234567890" target="_blank">WhatsApp</a>
-    <a href="https://twitter.com/yourtwitterhandle" target="_blank">Twitter</a>
-</div>
-
     </div>
-    
+
     <footer>
         <p>&copy; 2025 David Bassey. All rights reserved.</p>
     </footer>
-
 </body>
 </html>
