--- a/index.html
+++ b/index.html
@@ -6,7 +6,39 @@
     <title>David Bassey - Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        /* Existing styles... */
+        body {
+    font-family: Arial, sans-serif; /* Sets the font for the entire page */
+    margin: 0; /* Removes default margin */
+    padding: 0; /* Removes default padding */
+    background-color: #f4f4f4; /* Light grey background color */
+    color: #333; /* Dark grey text color */
+}
+
+header {
+    background: #333; /* Dark background for the header */
+    color: #fff; /* White text color */
+    padding: 20px; /* Padding around the header content */
+    text-align: center; /* Center-aligns text in header */
+}
+
+h1 {
+    margin: 0; /* Removes default margin from the heading */
+}
+
+nav a {
+    color: #00ffcc; /* Light cyan color for navigation links */
+    margin: 0 15px; /* Horizontal margin between links */
+    text-decoration: none; /* Removes underline from links */
+}
+
+.section {
+    padding: 20px; /* Padding inside each section */
+    margin: 20px auto; /* Vertical margin and centers the section */
+    max-width: 800px; /* Maximum width of the section */
+    background: #fff; /* White background for sections */
+    border-radius: 8px; /* Rounded corners */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow effect */
+}
 
         .carousel {
             display: flex;
