--- a/index.html
+++ b/index.html
@@ -114,15 +114,9 @@ nav a {
             <div class="carousel-inner">
                 <div class="carousel-item">
                     <img src="portfolio.jpg" alt="Personal Portfolio Website" loading="lazy">
-                    <h3>Personal Portfolio Website</h3>
+                    <h3>Portfolio site</h3>
                     <p>A responsive website showcasing my skills and projects.</p>
                     <p>Technologies: HTML, CSS, JavaScript.</p>
-                </div>
-                <div class="carousel-item">
-                    <img src="task_management.jpg" alt="Task Management App" loading="lazy">
-                    <h3>Task Management App</h3>
-                    <p>A web app for creating and managing tasks.</p>
-                    <p>Technologies: Node.js, MongoDB, React Native.</p>
                 </div>
                 <div class="carousel-item">
                     <img src="orbital_blast.jpg" alt="Orbital Blast" loading="lazy">
@@ -133,9 +127,10 @@ nav a {
                 </div>
                 <div class="carousel-item">
                     <img src="blog_platform.jpg" alt="Blog Platform" loading="lazy">
-                    <h3>Blog Platform</h3>
+                    <h3>coders&conquerors</h3>
                     <p>A platform for creating and sharing blog posts.</p>
                     <p>Technologies: Ruby on Rails, React.</p>
+                     <a href="c&c.html" class="site-link" target="_blank">Visit My Site</a>
                 </div>
             </div>
         </div>
